--- a/2.CSS(Cascading-Style-Sheets)/CSS/fuentes.css
+++ b/2.CSS(Cascading-Style-Sheets)/CSS/fuentes.css
@@ -1,4 +1,11 @@
 /* Formato de Textos */
+div{
+    width: 500px;
+    height: auto;
+    border: 2px solid black;
+    padding: 20px;
+    margin: 20px;
+}
 /*Fuentes*/
 h2{
     font: 20px;
@@ -33,3 +40,10 @@ h4{
 }
 
 /*FUENTES DE TERCEROS*/
+p{
+    text-indent: 50px;
+    letter-spacing: 1px;
+    line-height: 1.5;
+    word-spacing: 3px;
+    font-family: "Roboto Condensed", sans-serif;
+}
